# in-house-expensify

./: .gitignore  manage.py  pyproject.toml  readme.md
expenses/: backends.py  models.py  note.txt  serializers.py  urls.py  views.py
in_house/: asgi.py  settings.py  urls.py  views.py  wsgi.py
