[tool.poetry]
name = "in-house"
version = "0.1.0"
description = ""
authors = ["Yashwanth Rama Krishna Reddy <yashwanth10005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
openai = "^1.35.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
